@@ -61,6 +61,14 @@
  *	declarations, parameters and names.
  */
 
+/*{{{  private types*/
+typedef struct TAG_typedeclhook {
+	int wssize;
+} typedeclhook_t;
+
+
+/*}}}*/
+
 
 /*{{{  static void occampi_initchandecl (tnode_t *node, codegen_t *cgen, void *arg)*/
 /*
@@ -227,6 +235,107 @@ tnode_dumptree (bename, 1, stderr);
 	/* scope the body */
 	map_submapnames (bodyp, map);
 	return 0;
+}
+/*}}}*/
+
+
+/*{{{  static int occampi_scopein_typedecl (tnode_t **node, scope_t *ss)*/
+/*
+ *	called to scope a type declaration (DATA TYPE ...)
+ */
+static int occampi_scopein_typedecl (tnode_t **node, scope_t *ss)
+{
+	tnode_t *name = tnode_nthsubof (*node, 0);
+	tnode_t *type = tnode_nthsubof (*node, 1);
+	char *rawname;
+	name_t *sname = NULL;
+	tnode_t *newname;
+
+	if (name->tag != opi.tag_NAME) {
+		scope_error (name, ss, "name not raw-name!");
+		return 0;
+	}
+	rawname = tnode_nthhookof (name, 0);
+#if 0
+fprintf (stderr, "occampi_scopein_typedecl: here! rawname = \"%s\"\n", rawname);
+#endif
+
+	sname = name_addscopename (rawname, *node, type, NULL);
+	newname = tnode_createfrom (opi.tag_NTYPEDECL, name, sname);
+	SetNameNode (sname, newname);
+	tnode_setnthsub (*node, 0, newname);
+
+	/* free the old name */
+	tnode_free (name);
+	ss->scoped++;
+	return 1;
+}
+/*}}}*/
+/*{{{  static int occampi_scopeout_typedecl (tnode_t **node, scope_t *ss)*/
+/*
+ *	called to scope-out a variable declaration
+ */
+static int occampi_scopeout_typedecl (tnode_t **node, scope_t *ss)
+{
+	tnode_t *name = tnode_nthsubof (*node, 0);
+	name_t *sname;
+
+	if (name->tag != opi.tag_NTYPEDECL) {
+		scope_error (name, ss, "not NTYPEDECL!");
+		return 0;
+	}
+	sname = tnode_nthnameof (name, 0);
+
+#if 0
+fprintf (stderr, "occampi_scopein_typedecl: here! sname->me->name = \"%s\"\n", sname->me->name);
+#endif
+
+	name_descopename (sname);
+
+	return 1;
+}
+/*}}}*/
+/*{{{  static int occampi_prewalk_bytesfor_typedecl (tnode_t *node, void *data)*/
+/*
+ *	walks a tree to collect the cumulative size of a type (record types)
+ *	returns 0 to stop walk, 1 to continue
+ */
+static int occampi_prewalk_bytesfor_typedecl (tnode_t *node, void *data)
+{
+	typedeclhook_t *tdh = (typedeclhook_t *)data;
+	int this_ws;
+
+	this_ws = tnode_bytesfor (node);
+	if (this_ws > 0) {
+		tdh->wssize += this_ws;
+	}
+	return 1;
+}
+/*}}}*/
+/*{{{  static int occampi_bytesfor_typedecl (tnode_t *node)*/
+/*
+ *	returns the number of bytes required by a type declaration (DATA TYPE ...)
+ */
+static int occampi_bytesfor_typedecl (tnode_t *node)
+{
+	typedeclhook_t *tdh = (typedeclhook_t *)tnode_nthhookof (node, 0);
+	tnode_t *type = tnode_nthsubof (node, 1);
+
+	if (!tdh->wssize) {
+		/*{{{  walk the type to find out its size*/
+		tnode_prewalktree (type, occampi_prewalk_bytesfor_typedecl, (void *)tdh);
+
+		if (!tdh->wssize) {
+			nocc_error ("occampi_bytesfor_typedecl(): type has 0 size..  :(");
+		}
+
+		/*}}}*/
+	}
+
+#if 0
+fprintf (stderr, "occampi_bytesfor_typedecl(): return size = %d\n", tdh->wssize);
+#endif
+	return tdh->wssize;
 }
 /*}}}*/
 
@@ -802,6 +911,29 @@ static tnode_t *occampi_gettype_namenode (tnode_t *node, tnode_t *default_type)
 	return NULL;
 }
 /*}}}*/
+/*{{{  static int occampi_bytesfor_namenode (tnode_t *node)*/
+/*
+ *	returns the number of bytes in a name-node, associated with its type only
+ */
+static int occampi_bytesfor_namenode (tnode_t *node)
+{
+	if (node->tag == opi.tag_NTYPEDECL) {
+		name_t *name = tnode_nthnameof (node, 0);
+		tnode_t *type, *decl;
+
+		type = NameTypeOf (name);
+		decl = NameDeclOf (name);
+#if 0
+fprintf (stderr, "occampi_bytesfor_namenode(): type = ");
+tnode_dumptree (type, 1, stderr);
+#endif
+
+		return tnode_bytesfor (decl);
+	}
+	nocc_error ("occampi_bytesfor_namenode(): no bytes for [%s]", node->tag->name);
+	return -1;
+}
+/*}}}*/
 /*{{{  static int occampi_namemap_namenode (tnode_t **node, map_t *map)*/
 /*
  *	transforms given name into a back-end name
@@ -823,6 +955,8 @@ tnode_dumptree (bename, 1, stderr);
 	return 0;
 }
 /*}}}*/
+
+
 /*{{{  static void occampi_procdecl_dfaeh_stuck (dfanode_t *dfanode, token_t *tok)*/
 /*
  *	called by parser when it gets stuck in an occampi:procdecl DFA node
@@ -846,6 +980,70 @@ static void occampi_procdecl_dfaeh_stuck (dfanode_t *dfanode, token_t *tok)
 	}
 	parser_error (tok->origin, msgbuf);
 	return;
+}
+/*}}}*/
+/*{{{  static void occampi_typedecl_dfaeh_stuck (dfanode_t *dfanode, token_t *tok)*/
+/*
+ *	called by parser when it gets stuck in an occampi:typedecl DFA node
+ */
+static void occampi_typedecl_dfaeh_stuck (dfanode_t *dfanode, token_t *tok)
+{
+	char msgbuf[1024];
+	int gone = 0;
+	int max = 1023;
+
+	gone += snprintf (msgbuf + gone, max - gone, "parse error at %s in DATA TYPE declaration", lexer_stokenstr (tok));
+	if (DA_CUR (dfanode->match)) {
+		int n;
+
+		gone += snprintf (msgbuf + gone, max - gone, ", expected ");
+		for (n=0; n<DA_CUR (dfanode->match); n++) {
+			token_t *match = DA_NTHITEM (dfanode->match, n);
+
+			gone += snprintf (msgbuf + gone, max - gone, "%s%s", !n ? "" : ((n == DA_CUR (dfanode->match) - 1) ? " or " : ", "), lexer_stokenstr (match));
+		}
+	}
+	parser_error (tok->origin, msgbuf);
+	return;
+}
+/*}}}*/
+
+
+/*{{{  static void occampi_typedecl_hook_dumptree (tnode_t *node, void *hook, int indent, FILE *stream)*/
+/*
+ *	dumps a typedeclhook_t hook-node (debugging)
+ */
+static void occampi_typedecl_hook_dumptree (tnode_t *node, void *hook, int indent, FILE *stream)
+{
+	typedeclhook_t *tdh = (typedeclhook_t *)hook;
+
+	occampi_isetindent (stream, indent);
+	if (!hook) {
+		fprintf (stream, "<typedeclhook value=\"(null)\" addr=\"0x%8.8x\" />\n", (unsigned int)tdh);
+	} else {
+		fprintf (stream, "<typedeclhook wssize=\"%d\" addr=\"0x%8.8x\" />\n", tdh->wssize, (unsigned int)tdh);
+	}
+
+	return;
+}
+/*}}}*/
+/*{{{  static void *occampi_typedeclhook_blankhook (void *tos)*/
+/*
+ *	creates a new typedeclhook_t and returns it as void * for DFA processing
+ */
+static void *occampi_typedeclhook_blankhook (void *tos)
+{
+	typedeclhook_t *tdh;
+
+	if (tos) {
+		nocc_internal ("occampi_typedeclhook_blankhook(): tos was not NULL (0x%8.8x)", (unsigned int)tos);
+		return NULL;
+	}
+	tdh = (typedeclhook_t *)smalloc (sizeof (typedeclhook_t));
+
+	tdh->wssize = 0;
+
+	return (void *)tdh;
 }
 /*}}}*/
 
@@ -874,11 +1072,12 @@ static int occampi_decl_init_nodes (void)
 	i = -1;
 	opi.tag_NAME = tnode_newnodetag ("NAME", &i, tnd, NTF_NONE);
 	/*}}}*/
-	/*{{{  occampi:namenode -- N_DECL, N_PARAM, N_PROCDEF*/
+	/*{{{  occampi:namenode -- N_DECL, N_PARAM, N_PROCDEF, N_TYPEDECL*/
 	i = -1;
 	tnd = opi.node_NAMENODE = tnode_newnodetype ("occampi:namenode", &i, 0, 1, 0, TNF_NONE);
 	cops = tnode_newcompops ();
 	cops->gettype = occampi_gettype_namenode;
+	cops->bytesfor = occampi_bytesfor_namenode;
 	cops->namemap = occampi_namemap_namenode;
 	tnd->ops = cops;
 	i = -1;
@@ -887,6 +1086,8 @@ static int occampi_decl_init_nodes (void)
 	opi.tag_NPARAM = tnode_newnodetag ("N_PARAM", &i, opi.node_NAMENODE, NTF_NONE);
 	i = -1;
 	opi.tag_NPROCDEF = tnode_newnodetag ("N_PROCDEF", &i, opi.node_NAMENODE, NTF_NONE);
+	i = -1;
+	opi.tag_NTYPEDECL = tnode_newnodetag ("N_TYPEDECL", &i, opi.node_NAMENODE, NTF_NONE);
 	/*}}}*/
 	/*{{{  occampi:hiddennode -- HIDDENPARAM*/
 	i = -1;
@@ -910,6 +1111,18 @@ static int occampi_decl_init_nodes (void)
 	tnd->ops = cops;
 	i = -1;
 	opi.tag_VARDECL = tnode_newnodetag ("VARDECL", &i, tnd, NTF_NONE);
+	/*}}}*/
+	/*{{{  occampi:typedecl -- TYPEDECL*/
+	i = -1;
+	tnd = tnode_newnodetype ("occampi:typedecl", &i, 3, 0, 1, TNF_SHORTDECL);
+	tnd->hook_dumptree = occampi_typedecl_hook_dumptree;
+	cops = tnode_newcompops ();
+	cops->scopein = occampi_scopein_typedecl;
+	cops->scopeout = occampi_scopeout_typedecl;
+	cops->bytesfor = occampi_bytesfor_typedecl;
+	tnd->ops = cops;
+	i = -1;
+	opi.tag_TYPEDECL = tnode_newnodetag ("TYPEDECL", &i, tnd, NTF_NONE);
 	/*}}}*/
 	/*{{{  occampi:fparam -- FPARAM*/
 	i = -1;
@@ -995,13 +1208,16 @@ static int occampi_decl_reg_reducers (void)
 {
 	parser_register_grule ("opi:namereduce", parser_decode_grule ("T+St0XC1R-", occampi_nametoken_to_hook, opi.tag_NAME));
 	parser_register_grule ("opi:namepush", parser_decode_grule ("T+St0XC1N-", occampi_nametoken_to_hook, opi.tag_NAME));
+	parser_register_grule ("opi:2namepush", parser_decode_grule ("T+St0XC1N-T+St0XC1N-", occampi_nametoken_to_hook, opi.tag_NAME, occampi_nametoken_to_hook, opi.tag_NAME));
 	parser_register_grule ("opi:fparam2nsreduce", parser_decode_grule ("N+Sn0N+C2R-", opi.tag_FPARAM));
 	parser_register_grule ("opi:fparam2tsreduce", parser_decode_grule ("T+St0XC1T+XC1C2R-", occampi_nametoken_to_hook, opi.tag_NAME, occampi_nametoken_to_hook, opi.tag_NAME, opi.tag_FPARAM));
 	parser_register_grule ("opi:fparam1tsreduce", parser_decode_grule ("T+St0XC10C2R-", occampi_nametoken_to_hook, opi.tag_NAME, opi.tag_FPARAM));
 	parser_register_grule ("opi:fparam1tsreducei", parser_decode_grule ("T+St0XC1C10C2R-", occampi_nametoken_to_hook, opi.tag_NAME, opi.tag_ASINPUT, opi.tag_FPARAM));
 	parser_register_grule ("opi:fparam1tsreduceo", parser_decode_grule ("T+St0XC1C10C2R-", occampi_nametoken_to_hook, opi.tag_NAME, opi.tag_ASOUTPUT, opi.tag_FPARAM));
 	parser_register_grule ("opi:declreduce", parser_decode_grule ("SN1N+N+0C3R-", opi.tag_VARDECL));
+	parser_register_grule ("opi:xdeclreduce", parser_decode_grule ("SN1N+N+V0C3R-", opi.tag_VARDECL));
 	parser_register_grule ("opi:procdeclreduce", parser_decode_grule ("SN1N+N+V00C4R-", opi.tag_PROCDECL));
+	parser_register_grule ("opi:datatypedeclreduce", parser_decode_grule ("SN1N+N+V00XC4R-", occampi_typedeclhook_blankhook, opi.tag_TYPEDECL));
 
 	parser_register_reduce ("Roccampi:directedchanname", occampi_reduce_directedchanname, NULL);
 
@@ -1030,6 +1246,12 @@ static dfattbl_t **occampi_decl_init_dfatrans (int *ntrans)
 	
 	dynarray_add (transtbl, dfa_bnftotbl ("occampi:fparamlist ::= ( -@@) {<opi:nullset>} | { occampi:fparam @@, 1 } )"));
 
+	dynarray_add (transtbl, dfa_transtotbl ("occampi:typedecl ::= [ 0 @DATA 1 ] [ 1 @TYPE 2 ] [ 2 +Name 3 ] [ 3 {<opi:namepush>} ] [ 3 @IS 4 ] [ 3 Newline 7 ] " \
+				"[ 4 occampi:type 5 ] [ 5 @@: 6 ] [ 6 {<opi:datatypedeclreduce>} -* ] " \
+				"[ 7 Indent 8 ] [ 8 @RECORD 9 ] [ 9 Newline 10 ] [ 10 Outdent 11 ] [ 11 @@: 12 ] [ 12 {<opi:datatypedeclreduce>} -* ] "));
+
+	dynarray_add (transtbl, dfa_transtotbl ("occampi:namestart +:= [ 0 +Name 1 ] [ 1 +Name 2 ] [ 2 {<opi:2namepush>} ] [ 2 @@: 3 ] [ 3 {<opi:xdeclreduce>} -* ]"));
+
 	*ntrans = DA_CUR (transtbl);
 	return DA_PTR (transtbl);
 }
@@ -1041,8 +1263,10 @@ static dfattbl_t **occampi_decl_init_dfatrans (int *ntrans)
 static int occampi_decl_post_setup (void)
 {
 	static dfaerrorhandler_t procdecl_eh = { occampi_procdecl_dfaeh_stuck };
+	static dfaerrorhandler_t typedecl_eh = { occampi_typedecl_dfaeh_stuck };
 
 	dfa_seterrorhandler ("occampi:procdecl", &procdecl_eh);
+	dfa_seterrorhandler ("occampi:typedecl", &typedecl_eh);
 
 	return 0;
 }
